--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1>Welcome to </h1>
-    <h1>Sahnur Shifat world!</h1>
+    <h1><span>Sahnur Shifat</span> world!</h1>
+    <h3>A midiate Web-Developer & young learner</h3>
 </body>
 </html>
