--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome to </h1>
-    <h1><span>Sahnur Shifat</span> world!</h1>
-    <h3>A midiate Web-Developer & young learner</h3>
+    <section class="banner">
+        <div class="futani">
+            <h1>Welcome to </h1>
+            <h1><span>Sahnur Shifat</span> world!</h1>
+            <h3>A midiate Web-Developer & young learner</h3>
+            <p>Hello, I'm shifat. I love to code. And I'm enjoying my Web-Development courses. This is my test website.
+                Here
+                you can see a glance of my unripe work experience. Hope that you will like it.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sahnur-shifat-14926a228/">Hire
+                Me</a>
+        </div>
+        <div class="futani">
+            <img src="shifat-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
