--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
             <img src="shifat-bg.png" alt="">
         </div>
     </section>
+    <section class="second">
+        <div class="futani">
+            <img src="pinky-bg.png" alt="">
+        </div>
+        <div class="futani">
+            <h1><span id="tnt">Dream</span> Big</h1>
+            <h2>Become the best <span id="tnt">Web-Developer!!</span></h2>
+            <p>I've already learned the basic consept of HTML & CSS. Also mastered the basic coadig level. Actually I
+                want to be a famous Web-Developer. And it is only possible if I love my work & my passion.
+                Coading
+                is my
+                passion. And I will cherish my passion to chase my dream.</p>
+            <a class="link-buttn" target="_blank" href="#">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
