--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="banner">
+    <section class="banner container">
         <div class="futani">
             <h1>Welcome to </h1>
             <h1><span>Sahnur Shifat</span> world!</h1>
@@ -28,7 +28,7 @@
             <img src="shifat-bg.png" alt="">
         </div>
     </section>
-    <section class="second">
+    <section class="second container">
         <div class="futani">
             <img src="pinky-bg.png" alt="">
         </div>
@@ -42,6 +42,30 @@
                 passion. And I will cherish my passion to chase my dream.</p>
             <a class="link-buttn" target="_blank" href="#">Download Resume</a>
         </div>
+    </section>
+    <section id="third">
+        <h1>Experiences</h1>
+        <div class="container">
+            <div class="x-area">
+                <h2>Full Stack Developer</h2>
+                <h3>2022-Present | Full Stack Developer</h3>
+                <p>I'm a full stack web developer. I've done a beutiful jurney during my workspace. That created some
+                    great
+                    moment's for me. Man is as big as his dream. So dream big. Chase your dreams. And be the inspiration
+                    of
+                    millions!!</p>
+            </div>
+            <div id="jnr" class="x-area">
+                <h2>Junior Web-Developer</h2>
+                <h3>2022-2024 | Experenced Junior Developer</h3>
+                <p>Hola, I'm a junion web developer. Experienced in my work field. I've gained them from my mistakes.
+                    I've
+                    fixed so many common & difficult problems during my web develpoer jurney. I'm able to make it
+                    because
+                    I've done so many silly stuffs. </p>
+            </div>
+        </div>
+
     </section>
 </body>
 
