--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <a class="link-buttn" target="_blank" href="#">Download Resume</a>
         </div>
     </section>
-    <section id="third">
-        <h1>Experiences</h1>
+    <section class="third">
+        <h1 id="manja">Experiences</h1>
         <div class="container">
-            <div class="x-area">
-                <h2>Full Stack Developer</h2>
-                <h3>2022-Present | Full Stack Developer</h3>
+            <div id="stack" class="x-area">
+                <h2 id="full">Full Stack Developer</h2>
+                <h3 id="fast">2022-Present | Full Stack Developer</h3>
                 <p>I'm a full stack web developer. I've done a beutiful jurney during my workspace. That created some
                     great
                     moment's for me. Man is as big as his dream. So dream big. Chase your dreams. And be the inspiration
@@ -56,8 +56,8 @@
                     millions!!</p>
             </div>
             <div id="jnr" class="x-area">
-                <h2>Junior Web-Developer</h2>
-                <h3>2022-2024 | Experenced Junior Developer</h3>
+                <h2 id="web">Junior Web-Developer</h2>
+                <h3 id="last">2022-2024 | Experenced Junior Developer</h3>
                 <p>Hola, I'm a junion web developer. Experienced in my work field. I've gained them from my mistakes.
                     I've
                     fixed so many common & difficult problems during my web develpoer jurney. I'm able to make it
@@ -67,6 +67,9 @@
         </div>
 
     </section>
+    <footer>
+        <p>@Sahnur-Shifat, A member of Programming Hero Community.</p>
+    </footer>
 </body>
 
 </html>
